2004-02-04  Oliver Kiddle  <opk@zsh.org>

	* Mikael Magnusson: 19405: Completion/Unix/Command/_gphoto2:
	new completion for gphoto2

2004-01-22  Peter Stephenson  <pws@csr.com>

	* 19389 plus added stdunsetfn to EPOCHSECONDS:
	Src/Modules/datetime.c, Doc/Zsh/mod_datetime.yo: add -s scalar
	option to strftime, remove EPOCHSECONDS cleanly when module
	unloaded.

2004-01-21  Oliver Kiddle  <opk@zsh.org>

	* 19387: Completion/...: add (-.) glob qualifiers to many globs
	where only files are directly applicable: _files can add directories 

	* 19309: Completion/Unix/Type/_files: add #q to the start of a
	glob qualifier in the -g argument so that glob qualifiers can
	be specified from the file-patterns style
	
2004-01-20  Peter Stephenson  <pws@csr.com>

	* Bob Schmertz: 19385: Src/compmatch.c: protect against calling
	add_match_part with NULL pointers.

2004-01-19  Peter Stephenson  <pws@csr.com>

	* Vincent Stemen <zsh@hightek.org>: users/7011:
	Src/mkbltnmlst.sh: add_automathfunc was misnamed in
	shell script.

2004-01-16  Peter Stephenson  <pws@csr.com>

	* 19382: Functions/Misc/zmv: better error message if move failed
	due to file system not recognising new name as being different.

2004-01-15  Oliver Kiddle  <opk@zsh.org>

	* 19378: Completion/Debian/Command/_update-rc.d,
	Completion/Unix/Type/_services: complete for update-rc.d and avoid
	picking up README files as services

	* 19377 based on 19375 (Laurent Rineau):
	Completion/Unix/Type/_email_addresses: handle better
	situation where MH is not installed

2004-01-15  Peter Stephenson  <pws@csr.com>

	* 19374: Src/params.c: typo in 19361 caused crashes when
	unsetting special parameters tied internally to arrays.

2004-01-14  Peter Stephenson  <pws@csr.com>

	* 19364: Completion/Unix/Command/.distfiles,
	Completion/Unix/Command/_printenv: complete for printenv.

2004-01-14  Oliver Kiddle  <opk@zsh.org>

	* 19369: Completion/Unix/Command/_getent,
	Completion/Debian/Command/_aptitude,